# grids

./: .dockerignore  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: DEMO.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: analysis.rs  commands.rs  error.rs  io.rs  lib.rs  main.rs  models.rs  store.rs
apps/desktop/src-tauri/src/db/: convert.rs  introspect.rs  mod.rs  pool.rs  query.rs  tunnel.rs
apps/desktop/src/components/ai/: AiView.tsx  DashboardsView.tsx
apps/desktop/src/lib/: actions.ts  demo.ts  hooks.ts  ipc.ts  mock.ts  platform.ts  webauth.ts  window.ts
apps/desktop/src/stores/: connections.ts  settings.ts  ui.ts  workspace.ts
apps/marketing/: README.md  index.html  package.json  tsconfig.json  vite.config.ts  wrangler.toml
apps/marketing/public/: _headers  _redirects
apps/marketing/public/downloads/: README.md
apps/marketing/scripts/: build-with-demo.mjs  dev-with-demo.mjs
apps/marketing/src/: App.tsx  index.css
apps/marketing/src/components/: AppPreview.tsx  Footer.tsx  Logo.tsx  Nav.tsx  Page.tsx  Shots.tsx  cta.tsx
apps/marketing/src/lib/: brand.ts  markdown.tsx  os.ts  releases.ts  router.tsx
apps/marketing/src/pages/: Changelog.tsx  Downloads.tsx  Landing.tsx  Releases.tsx
apps/web/: package.json  tsconfig.json
apps/web/src/: backend.ts  cli.ts  pg.ts  server.ts  store.ts  tunnel.ts
apps/web/src/auth/: config.ts  pages.ts  passwords.ts  plugin.ts  store.ts
assets/screenshots/: README.md
docker/: Dockerfile  docker-compose.yml
docs/: README.md  architecture.md  code-signing.md  configuration.md  connections.md  getting-started.md  releasing.md  security.md  self-hosting.md
scripts/: gen-icon.mjs  gen-screenshots.mjs  release-notes.mjs
(+38 files in other folders)
